# rust-blog-engine

./: Cargo.toml  README.md  docker-compose.yaml  dockerfile
src/: main.rs
src/application/: mod.rs
src/articles/: assets.rs  handlers.rs  mod.rs  model.rs  service.rs  views.rs
src/articles/data/assets/: article.css  articles.css  common.css
src/articles/data/templates/: article_view.html  articles.html  html_header.html  new_article.html  redirect_view.html
src/articles/templates/: article_view.html  articles.html  index.html  new_article.html
src/database/: mod.rs
src/middlewares/: security.rs
