[package]
name = "rust-blog-backend"
version = "0.1.0"
authors = ["DamienAI"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
actix-cors = "0.2.0"
serde = "1.0.114"
mongodb = "1.1.0"
mime = "0.3.16"
ammonia = "3.1.0"
pulldown-cmark = "0.7.2"
tera = "1.5.0"
chrono = "0.4.15"
futures = "0.3.5"
actix-files = "0.2.2"
